Updating npm dependencies and to use Leaflet 1.5.1.

--- a/spec/index.html
+++ b/spec/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Spec Runner</title>
 	<link rel="stylesheet" type="text/css" href="../node_modules/mocha/mocha.css">
+	<link rel="stylesheet" type="text/css" href="../node_modules/leaflet/dist/leaflet.css">
 </head>
 <body>
 	<div id="mocha"></div>
@@ -14,8 +15,7 @@
 
 	<!-- source files -->
 	<script type="text/javascript" src="before.js"></script>
-	<script type="text/javascript" src="../node_modules/Leaflet/build/deps.js"></script>
-	<script type="text/javascript" src="../node_modules/Leaflet/debug/leaflet-include.js"></script>
+	<script type="text/javascript" src="../node_modules/leaflet/dist/leaflet.js"></script> 
 	<script type="text/javascript" src="../build/deps.js"></script>
 	<script type="text/javascript" src="../build/leaflet.draw-include.js"></script>
 
